syntax = "proto3";

package student;

import "google/protobuf/empty.proto";

import "google/protobuf/timestamp.proto";

option go_package = "studentpb";

message Student {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    int32 grade = 4;
    google.protobuf.Timestamp created_at = 5;
}

message CreateStudentRequest {
    string first_name = 1;
    string last_name = 2;
    int32 grade = 3;
}

message CreateStudentResponse {
    string id = 1;
}

message GetStudentRequest {
    string id = 1;
}

message GetStudentResponse {
    Student student = 1;
}

message UpdateStudentRequest {
    Student student = 1;
}

message DeleteStudentRequest {
    string id = 1;
}

message ListStudentsRequest {
    int32 grade = 1;
}

message ListStudentsResponse {
    repeated Student students = 1;
}

service StudentService {
    rpc CreateStudent(CreateStudentRequest) returns (CreateStudentResponse);
    rpc GetStudent(GetStudentRequest) returns (GetStudentResponse);
    rpc UpdateStudent(UpdateStudentRequest) returns (google.protobuf.Empty);
    rpc DeleteStudent(DeleteStudentRequest) returns (google.protobuf.Empty);
    rpc ListStudents(ListStudentsRequest) returns (ListStudentsResponse);
}